<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/text_view_main_menu"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_weight="0.01"
        tools:text="Main Menu"
        android:fontFamily="sans-serif"
        android:textSize="24sp"
        android:textColor="@android:color/background_dark"
        android:textAlignment="center"
        android:layout_marginTop="20dp" />

    <Button
        android:text="@string/action_known_dish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Known_Dishes_button"
        android:layout_weight="0.01"
        tools:text="Known Dishes"
        android:elevation="0dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"/>

    <Button
        android:text="@string/action_unknow_dish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Unknown_Dishes_Button"
        android:layout_weight="0.01"
        tools:text="Unknown Dishes"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"/>

    <Button
        android:text="@string/action_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Search_Button"
        android:layout_weight="0.01"
        tools:text="Search"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"/>

    <Button
        android:text="@string/action_shopping_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Shopping_List_Button"
        android:layout_weight="0.01"
        tools:text="Shopping List"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"/>

    <Button
        android:text="@string/action_tag_manager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tagManagerButton"
        android:layout_weight="0.01"
        android:background="@color/colorAccent"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"/>

    <Button
        android:text="@string/action_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Log_Out_Button"
        android:layout_weight="0.01"
        tools:text="Log Out" />

    <Button
        android:text="@string/action_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Quit_Button"
        android:layout_weight="0.01"
        tools:text="Quit" />
</LinearLayout>