<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style = ""
    app:layout_scrollFlags="scroll">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/dish_editor_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/NameTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/NameTextEditor" />

            <TextView
                android:text="@string/dish_editor_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/DesTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/DescriptionTextEditor" />

            <CheckBox
                android:text="@string/dish_editor_is_known_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/isKnownCheckBox" />

            <TextView
                android:text="@string/dish_editor_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/DateTextView" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/DateTextEditor"
                 />

            <TextView
                android:text="Ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/IngredientesTextView" />

            <ListView
                android:layout_width="match_parent"
                android:id="@+id/IngredientsList"
                android:layout_height="wrap_content"
                android:descendantFocusability="afterDescendants"
                android:focusable="false"/>

            <Button
                android:text="@string/action_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="10dp"
                android:id="@+id/dishEditorEditButton" />

            <Button
                android:text="@string/action_add_ingredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/AddIngredientButton"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/action_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/IngredientCancelButton"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginRight="5dp"/>

                <Button
                    android:text="@string/action_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/IngredientConfirmButton"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</LinearLayout>